--- a/src/salamanders.html
+++ b/src/salamanders.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include 'head', title:'Page 2' %}
+<link rel="icon" type="image/png" href="favicon.ico">
+    {% include 'head', title:'Salamanders' %}
   <body class="page">
     {% include 'header' %}
     <main id="main-content">
