--- a/src/spiders.html
+++ b/src/spiders.html
@@ -5,17 +5,33 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Kreon:wght@300..700&display=swap" rel="stylesheet">
   {% include 'head', title:'Spiders' %}
-  <body class="page">
+  <body class="spiders">
     {% include 'header' %}
     <main id="main-content">
-      <h1>Page 2 of my website</h1>
+      
+    <img src="/assets/spiderhi.gif" alt="Short gif of a jumping spider waving" loop>
 
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quo
-        amet voluptate quis doloremque harum. Omnis esse atque, mollitia
-        consequatur dolore dicta ratione, dignissimos sunt molestias earum
-        obcaecati! Accusantium, ipsam.
-      </p>
+    <h1>
+    Spiders
+    </h1>
+
+      <h3> 
+      <em> "We help out!" </em>
+      </h3>
+
+    <p>
+    Spiders may be small but their contribution to the ecosystem is grand. Without spiders many small insects would grow in immeasurable numbers. Imagine how many flies there might be buzzing around! And without these little predators, birds would lose a food source and many birds we love and treasure could decrease greatly in number without spiders. These little guys are great housemates too! Spiders in the corners of rooms keep moths and other small bugs out of your way. But if you don't enjoy such a creepy critter in your own home, please put them outside (carefully). If you don't bother them, they won't bother you.
+    </p>
+
+    <strong> (Please be weary with any spiders you know to be dangerous. Below there is a list of spiders that are actually dangerous.) </strong>
+
+    <button type="a"> Jumping Spider </button>
+    <button type="b"> Orb Weaver </button>
+    <button type="c"> Crab Spider </button>
+    <button type="d"> Facts + Extras </button>
+
+    <strong> This is in no way a comprehensive list but just a way to get our visitors interested in these creepy critters! </strong>
+
     </main>
     {% include 'footer' %}
   </body>
