--- a/src/snakes.html
+++ b/src/snakes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <link rel="icon" type="image/png" href="favicon.ico">
     {% include 'head', title:'Snakes' %}
-  <body class="page">
+  <body class="snakes">
     {% include 'header' %}
     <main id="main-content">
       <h1>Page 2 of my website</h1>
