added jumping spider info and fixed link problems

--- a/src/index.html
+++ b/src/index.html
@@ -24,17 +24,17 @@
         
 
             <div class="icons">
-             <a href="spiders.html"> 
+             <a href="/spiders"> 
                  <img class="icon" alt="Spider Cartoon Icon" src="/assets/spiderr.png" /></a>
-                <a href="spiders.html"> 
+                <a href="/spiders" id="footlink"> 
                     <h2> Spiders </h2> </a>
-             <a href="salamanders.html">
+             <a href="/salamanders">
                   <img class="icon" alt="Salamander Cartoon Icon" src="/assets/salamanderr.png" /></a>
-                <a href="salamanders.html">
+                <a href="/salamanders" id="footlink">
                     <h2> Salamanders </h2> </a>
-             <a href="snakes.html">
+             <a href="/snakes">
                   <img class="icon" alt="Snake Cartoon Icon" src="/assets/snakee.png" /></a>
-                <a href="snakes.html">
+                <a href="/snakes" id="footlink">
                  <h2> Snakes </h2> </a>
             </div>
     </main>
