--- a/src/spiders.html
+++ b/src/spiders.html
@@ -11,9 +11,9 @@
       
     <img src="/assets/spiderhi.gif" alt="Short gif of a jumping spider waving" loop>
 
-    <h1>
+    <h2>
     Spiders
-    </h1>
+    </h2>
 
       <h3> 
       <em> "We help out!" </em>
@@ -25,12 +25,70 @@
 
     <strong> (Please be weary with any spiders you know to be dangerous. Below there is a list of spiders that are actually dangerous.) </strong>
 
-    <button type="a"> Jumping Spider </button>
-    <button type="b"> Orb Weaver </button>
-    <button type="c"> Crab Spider </button>
-    <button type="d"> Facts + Extras </button>
+    <h2> 
+      <a href="-"> Jumping Spider </a>
+      <a href="-"> Orb Weaver </a>
+      <a href="-"> Crab Spider </a>
+      <a href="-"> Facts + Extras </a>
+    </h2>
 
     <strong> This is in no way a comprehensive list but just a way to get our visitors interested in these creepy critters! </strong>
+
+      <div class="jumping">
+        <h2> 
+          Jumping Spiders
+        </h2>
+      </div>
+        <h3>
+          (Salticidae family)
+        </h3>
+      <img src="/assets/jumping.png" alt="Image of a common jumping spider close to the camera">
+      Paul Gaudette, 2015
+
+      <div class="info">
+        <strong> Lifespan: </strong> 1-2 years 
+        <strong> Size: </strong> 1 to 25 mm (0.04–0.98 in) 
+        <strong> Range: </strong> Global
+        <strong> Nocturnal or Diurnal: </strong> Diurnal, active during the day
+        <strong> Stigma: </strong> They are aggressive or violent and want to bite you
+      </div>
+
+      <p>
+        Jumping spiders are part of one of the largest families of spiders, with over 5,000 documented species! These little guys often have some iridescent fur on their bodies. They are quite active hunters who grasp prey with their long front legs. 
+      </p>
+      <p>
+        They do not actually spin webs like other spiders. Instead they used anchor lines to descend or swing from place to place. It’s quite impressive for such little creatures! They have been observed to build small silk tents for their eggs or themselves. Be it for over-wintering, molting, or just hiding out for awhile.
+      </p>
+
+      <img src="/assets/jumping2.png" alt="an image of a jumping spider jumping with a guideline">
+      Stan C Smith
+
+      <p>
+        Despite their small size they are territorial and do not like other spiders being around. They can bite although they have to be really pestered by humans to do so. Be gentle with our little friends! There’s no need to get too up in their business. Most spiders prefer to be left alone, although jumping spiders are one of the friendlier species. Some people even keep them as pets! However, we do not advise capturing wild animals. If you’re wondering about spider-keeping there are plenty of great resources out there! 
+      </p>
+      <p>
+        These little guys have 8 big eyes in sets of two, the biggest and front-most pair do most of the observing while the other 6 help keep them aware of their surroundings. They have nearly 360 degree vision. 
+      </p>
+      <p>
+        They can actually recognize human faces! Their little genius brains are quite the mystery to many scientists and entomologists. 
+      </p>
+
+    <!-- BREAK!!! NEXT INFO PAGE STARTS HERE -->
+
+     <div class="orb">
+        <h2> 
+          Orb Weavers
+        </h2>
+      </div>
+        <h3>
+          (Araneidae family)
+        </h3>
+      
+
+
+
+
+
 
     </main>
     {% include 'footer' %}
