edits and fixes

--- a/src/snakes.html
+++ b/src/snakes.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <link rel="icon" type="image/png" href="favicon.ico">
     {% include 'head', title:'Snakes' %}
-  <body class="snakes">
+  <body>
     {% include 'header' %}
-    <main id="main-content">
+    <main class="snakes"id="main-content">
       <h1>Page 2 of my website</h1>
 
       <p>
