--- a/src/spiders.html
+++ b/src/spiders.html
@@ -5,11 +5,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Kreon:wght@300..700&display=swap" rel="stylesheet">
   {% include 'head', title:'Spiders' %}
-  <body class="spiders">
+  <body>
     {% include 'header' %}
-    <main id="main-content">
+    <main class="spiders" id="main-content">
       
-    <img src="/assets/spiderhi.gif" alt="Short gif of a jumping spider waving" loop>
+    <img class="spiderhi" src="/assets/spiderhi.gif" alt="Short gif of a jumping spider waving" loop>
 
     <h2>
     Spiders
@@ -61,7 +61,7 @@
       </p>
 
       <img src="/assets/jumping2.png" alt="an image of a jumping spider jumping with a guideline">
-      Stan C Smith
+      Scott Linstead
 
       <p>
         Despite their small size they are territorial and do not like other spiders being around. They can bite although they have to be really pestered by humans to do so. Be gentle with our little friends! There’s no need to get too up in their business. Most spiders prefer to be left alone, although jumping spiders are one of the friendlier species. Some people even keep them as pets! However, we do not advise capturing wild animals. If you’re wondering about spider-keeping there are plenty of great resources out there! 
