--- a/src/salamanders.html
+++ b/src/salamanders.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <link rel="icon" type="image/png" href="favicon.ico">
     {% include 'head', title:'Salamanders' %}
-  <body class="salamanders">
+  <body>
     {% include 'header' %}
-    <main id="main-content">
+    <main class="salamanders" id="main-content">
       <h1>Page 2 of my website</h1>
 
       <p>
