--- a/src/about.html
+++ b/src/about.html
@@ -44,6 +44,7 @@
       <a href="https://www.nps.gov/articles/000/jumping-spider.htm"> Jumping Spider info (National Park Service)</a>
       <a href="https://www.flickr.com/photos/doundounba/17385204381/"> Paul Gaudette Image </a>
       <a href="https://fineartamerica.com/featured/1-regal-jumping-spider-jumping-scott-linstead.html?newartwork=true"> Scott Linstead Image </a>
+      <a href="https://www.theguardian.com/technology/2018/nov/25/five-animals-that-can-regenerate-salamander-starfish"> Silly Salamander Image </a>
     </div>
       
      
