added garden spider info + fixed and added CSS

--- a/src/snakes.html
+++ b/src/snakes.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="icon" type="image/png" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Kreon:wght@300..700&display=swap" rel="stylesheet">
     {% include 'head', title:'Snakes' %}
   <body>
     {% include 'header' %}
