--- a/src/spiders.html
+++ b/src/spiders.html
@@ -11,9 +11,9 @@
       
     <img class="spiderhi" src="/assets/spiderhi.gif" alt="Short gif of a jumping spider waving" loop>
 
-    <h2>
+    <h1>
     Spiders
-    </h2>
+    </h1>
 
       <h3> 
       <em> "We help out!" </em>
@@ -26,23 +26,23 @@
     <strong> (Please be weary with any spiders you know to be dangerous. Below there is a list of spiders that are actually dangerous.) </strong>
 
     <h2> 
-      <a href="-"> Jumping Spider </a>
-      <a href="-"> Orb Weaver </a>
-      <a href="-"> Crab Spider </a>
+      <a href="-"> Jumping Spiders </a>
+      <a href="-"> Orb Weavers </a>
+      <a href="-"> Crab Spiders </a>
       <a href="-"> Facts + Extras </a>
     </h2>
 
     <strong> This is in no way a comprehensive list but just a way to get our visitors interested in these creepy critters! </strong>
 
       <div class="jumping">
-        <h2> 
+        <h1> 
           Jumping Spiders
-        </h2>
+        </h1>
       </div>
         <h3>
           (Salticidae family)
         </h3>
-      <img src="/assets/jumping.png" alt="Image of a common jumping spider close to the camera">
+      <img src="/assets/jumpingg2.png" alt="Image of a common jumping spider close to the camera">
       Paul Gaudette, 2015
 
       <div class="info">
@@ -51,41 +51,68 @@
         <strong> Range: </strong> Global
         <strong> Nocturnal or Diurnal: </strong> Diurnal, active during the day
         <strong> Stigma: </strong> They are aggressive or violent and want to bite you
+        <strong> Reality: </strong> They are actually very friendly and curious. They won't bite unless bothered a lot.
       </div>
+     <br>
+     <br>
 
       <p>
         Jumping spiders are part of one of the largest families of spiders, with over 5,000 documented species! These little guys often have some iridescent fur on their bodies. They are quite active hunters who grasp prey with their long front legs. 
       </p>
+      <br>
       <p>
         They do not actually spin webs like other spiders. Instead they used anchor lines to descend or swing from place to place. It’s quite impressive for such little creatures! They have been observed to build small silk tents for their eggs or themselves. Be it for over-wintering, molting, or just hiding out for awhile.
       </p>
 
-      <img src="/assets/jumping2.png" alt="an image of a jumping spider jumping with a guideline">
+      <img src="/assets/jumpingg.png" alt="an image of a jumping spider jumping with a guideline">
       Scott Linstead
 
       <p>
         Despite their small size they are territorial and do not like other spiders being around. They can bite although they have to be really pestered by humans to do so. Be gentle with our little friends! There’s no need to get too up in their business. Most spiders prefer to be left alone, although jumping spiders are one of the friendlier species. Some people even keep them as pets! However, we do not advise capturing wild animals. If you’re wondering about spider-keeping there are plenty of great resources out there! 
       </p>
+      <br>
       <p>
         These little guys have 8 big eyes in sets of two, the biggest and front-most pair do most of the observing while the other 6 help keep them aware of their surroundings. They have nearly 360 degree vision. 
-      </p>
-      <p>
-        They can actually recognize human faces! Their little genius brains are quite the mystery to many scientists and entomologists. 
+      In fact, they can actually recognize human faces! Their little genius brains are quite the mystery to many scientists and entomologists. 
       </p>
 
     <!-- BREAK!!! NEXT INFO PAGE STARTS HERE -->
 
-     <div class="orb">
-        <h2> 
-          Orb Weavers
-        </h2>
+     <div class="argiope">
+        <h1> 
+          Yellow Garden Spider
+        </h1>
       </div>
         <h3>
-          (Araneidae family)
+          (Argiope aurantia)
         </h3>
-      
+        <img src="/assets/orbweaver.png" alt="Image of a Yellow Garden Spider on a web">
+        Shutterstock
 
+        <div class="info">
+          <strong> Lifespan: </strong> 1-2 years 
+          <strong> Size: </strong> Males 5–9 mm (0.20–0.35 in) / Females 19–28 mm (0.75–1.10 in)
+          <strong> Range: </strong> Central/North America
+          <strong> Nocturnal or Diurnal: </strong> Diurnal, active during the day
+          <strong> Stigma: </strong> They're big and scary!
+          <strong> Reality: </strong> They're females who need lots of energy to make and protect their eggs.
+        </div>
+       <br>
+       <br>
+        <p>
+          Yellow garden spiders may be scary, but they’d rather run away than confront you! These spiders are homebodies and spend most of their time on their webs, waiting for prey to fall into them. However - the spiders you actually see on the webs are almost always female. Males are busy on the move looking for females and are observed much less often. Yellow garden spiders are sexually dimorphic, which means that the males and females look very different. Think of birds and how the males are always more colorful! In the spider world, its the opposite, females are big and colorful.
+        </p>
 
+        <img src="/assets/argiope.jpeg" alt="Image of two Yellow Garden Spiders, female (left) male (right)">
+        Troy Bartlett - Female (left) and male (right) 
+
+        <p>
+          These spiders are part of a larger family of “orb weavers” - who are categorized by the webs they spin. Their web is very unique compared to other spiders. They spin an interesting zig-zag pattern. Maybe it’s eye-catching to prey or possible mates? A male spider is much more likely to wander into a house that has a “yellow spiders welcome!” sign than a random house. These spiders are commonly found in open fields, prairies, and gardens where they attach their webs to upright stems.  They appear to have an affinity for late-blooming plant species that have strong vertical stems such as goldenrods, ironweed, Joe-Pye weeds, and others.  Most likely, the spiders take advantage smorgasbord of insects attracted to the blooms.
+        </p>
+        <br>
+        <p>
+          Their hunting technique involves waiting for their prey and then striking. Yellow garden spiders will wrap their prey up in web and bite them with a venom that will quickly immobilize and kill them. Since their method of dispatching prey is rather quick, they need to do less web repairs. Luckily for us, even if we were to get bitten by these gentle giants, their venom causes no more harm than a bee sting.
+        </p>
 
 
 
