--- a/src/salamanders.html
+++ b/src/salamanders.html
@@ -8,14 +8,29 @@
   <body>
     {% include 'header' %}
     <main class="salamanders" id="main-content">
-      <h1>Page 2 of my website</h1>
+      
+    <img class="spiderhi" src="/assets/spiderhi.gif" alt="Short gif of a jumping spider waving" loop>
+
+    <h1>
+    Salamanders
+    </h1>
+
+      <h3> 
+      <em> "We're enviornmental indicators!" </em>
+      </h3>
 
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quo
-        amet voluptate quis doloremque harum. Omnis esse atque, mollitia
-        consequatur dolore dicta ratione, dignissimos sunt molestias earum
-        obcaecati! Accusantium, ipsam.
+        Salamanders are very unique slimy critters, they love spending their time near and in rivers and other bodies of water. You can often find them underneath rocks or damp leaf litter. They love being hydrated. Salamanders are very sensitive to pollutants or temperature variations, so an area with a lot of them tends to be a healthier and cleaner area! They’re known as environmental indicators and their presence or lack of it, indicates the quality of the environment. These amphibians should not be handled without great care. Their skin has a protective layer of mucus (similar to fish!) which keeps them hydrated and healthy. Handling can damage that barrier, so please don’t pick them up unless they need to be moved or aided. 
       </p>
+
+      <h2> 
+      <a href="-"> Hellbenders </a>
+      <a href="-"> Red Spotted Newt </a>
+      <a href="-"> Spotted Newt </a>
+      <a href="-"> Extras! </a>
+    </h2>
+
+     
     </main>
     {% include 'footer' %}
   </body>
