--- a/src/spiders.html
+++ b/src/spiders.html
@@ -29,7 +29,7 @@
       <a href="-"> Jumping Spiders </a>
       <a href="-"> Orb Weavers </a>
       <a href="-"> Crab Spiders </a>
-      <a href="-"> Facts + Extras </a>
+      <a href="-"> Extras! </a>
     </h2>
 
     <strong> This is in no way a comprehensive list but just a way to get our visitors interested in these creepy critters! </strong>
