--- a/src/snakes.html
+++ b/src/snakes.html
@@ -8,14 +8,27 @@
   <body>
     {% include 'header' %}
     <main class="snakes"id="main-content">
-      <h1>Page 2 of my website</h1>
+     
+      <h1>
+      Snakes
+      </h1>
+  
+        <h3> 
+        <em> "We're pest control!" </em>
+        </h3>
 
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quo
-        amet voluptate quis doloremque harum. Omnis esse atque, mollitia
-        consequatur dolore dicta ratione, dignissimos sunt molestias earum
-        obcaecati! Accusantium, ipsam.
-      </p>
+        <p>
+          words
+        </p>
+
+        <h2> 
+        <a href="-"> Garter Snakes </a>
+        <a href="-"> Milk Snakes </a>
+        <a href="-"> Copper Heads </a>
+        <a href="-"> Extras! </a>
+        </h2>
+
+
     </main>
     {% include 'footer' %}
   </body>
