oh my god......... uh. fixed gif, hell, added crab spider info

--- a/src/about.html
+++ b/src/about.html
@@ -49,6 +49,10 @@
       <a href="https://entnemdept.ufl.edu/creatures/MISC/SPIDERS/yellow-garden-spider.html" target=”_blank” > Yellow Garden Spider info (Featured Creatures) </a>
       <a href="https://www.shutterstock.com/image-photo/female-black-yellow-garden-spider-sitting-279216572" target=”_blank” > Shutterstock Yellow Garden Spider Image </a>
       <a href="https://en.wikipedia.org/wiki/Argiope_aurantia" target=”_blank” > Yellow Garden Spider Wiki </a>
+      <a href="https://www.uky.edu/Ag/CritterFiles/casefile/spiders/crab/crab.htm#:~:text=Many%20crab%20spiders%20live%20for,offspring%20hatch%20in%20the%20spring." target="_blank"> Crab Spider info (University of Kentucky)</a>
+      <a href="https://www.istockphoto.com/photo/misum%C3%A8ne-gm1421853771-467350580" target="_blank"> iStock Crab Spider Image </a>
+      <a href="https://sciencephotogallery.com/featured/crab-spider-feeding-dr-jeremy-burgess.html" target="_blank"> Jeremy Burgess Image</a>
+      <a href="https://en.wikipedia.org/wiki/Thomisidae" target="_blank"> Crab Spider Wiki</a>
       <a href="https://www.theguardian.com/technology/2018/nov/25/five-animals-that-can-regenerate-salamander-starfish" target=”_blank” > Silly Salamander Image </a>
     </div>
       
