--- a/src/salamanders.html
+++ b/src/salamanders.html
@@ -23,12 +23,12 @@
         Salamanders are very unique slimy critters, they love spending their time near and in rivers and other bodies of water. You can often find them underneath rocks or damp leaf litter. They love being hydrated. Salamanders are very sensitive to pollutants or temperature variations, so an area with a lot of them tends to be a healthier and cleaner area! They’re known as environmental indicators and their presence or lack of it, indicates the quality of the environment. These amphibians should not be handled without great care. Their skin has a protective layer of mucus (similar to fish!) which keeps them hydrated and healthy. Handling can damage that barrier, so please don’t pick them up unless they need to be moved or aided. 
       </p>
 
-      <h2> 
+      <nav class="page-nav" aria-label="page nav"> 
       <a href="-"> Hellbenders </a>
       <a href="-"> Red Spotted Newt </a>
       <a href="-"> Spotted Newt </a>
       <a href="-"> Extras! </a>
-    </h2>
+    </nav>
 
      
     </main>
