--- a/src/snakes.html
+++ b/src/snakes.html
@@ -21,12 +21,12 @@
           words
         </p>
 
-        <h2> 
+        <nav class="page-nav" aria-label="page nav"> 
         <a href="-"> Garter Snakes </a>
         <a href="-"> Milk Snakes </a>
         <a href="-"> Copper Heads </a>
         <a href="-"> Extras! </a>
-        </h2>
+        </nav>
 
 
     </main>
