re-added presistent nav + added salamander info + figured out page styles

--- a/src/salamanders.html
+++ b/src/salamanders.html
@@ -7,9 +7,9 @@
     {% include 'head', title:'Salamanders' %}
   <body>
     {% include 'header' %}
-    <main class="salamanders" id="main-content">
+    <main class="salamanders" id="main">
       
-    <img class="spiderhi" src="/assets/spiderhi.gif" alt="Short gif of a jumping spider waving" loop>
+    <img class="center" src="/assets/walking.gif" alt="Short gif of a salamander walking towards the camera" loop>
 
     <h1>
     Salamanders
@@ -24,11 +24,64 @@
       </p>
 
       <nav class="page-nav" aria-label="page nav"> 
-      <a href="-"> Hellbenders </a>
+      <a href="#hell"> Hellbenders </a>
       <a href="-"> Red Spotted Newt </a>
       <a href="-"> Spotted Newt </a>
-      <a href="-"> Extras! </a>
+      <a href="#extras"> Extras! </a>
     </nav>
+
+    <div id="hell" class="center">
+        <h1> 
+          Hellbenders
+        </h1>
+      </div>
+        <h3>
+          (Cryptobranchus alleganiensis)
+        </h3>
+      <img src="/assets/hellbender.png" alt="Image of a Hellbender in a riverbed" />
+      Pete Oxford/Minden Pictures
+
+      <div class="info">
+        <strong> Lifespan: </strong> 30+ years (unknown)
+        <strong> Size: </strong> 30 to 74 cm (12 to 29 in)
+        <strong> Range: </strong> Eastern and Central US Rivers
+        <strong> Nocturnal or Diurnal: </strong> Nocturnal, active during the night
+        <strong> Stigma: </strong> Scary swamp monsters!
+        <strong> Reality: </strong> Soggy swamp puppies who just want to be left alone and moisturized. 
+      </div>
+     <br>
+     <br>
+
+      <p>
+      Despite their name, these aquatic salamanders are harmless. They enjoy spending their days on river beds and use their feet to walk along the bottom rather than swimming. Hellbenders are the forth largest salamander species in the world (behind the South China giant salamander, the Chinese giant salamander, and the Japanese giant salamander). Males and females grow at the same rates, yet females often live longer and have the chance to grow bigger. They reach sexual maturity at 5 years and can live up to 30 years in captivity. We do not know how long these slimy critters can actually live because they simply aren’t observed as much as other species.
+      </p>
+      <p>
+      Hellbenders have fairly loose skin, likely to increase their surface area for maximum hydration. These gentle giants seldom leave the water, spending a majority of their time under the surface. It is theorized their name came from their odd appearance, calling them creatures from hell. Honestly, that’s a bit rude to the poor salamanders! 
+      </p>
+
+      <br>
+      <img src="/assets/superjumbo.png" alt="A Hellbender floating in the water with a white background" />
+      NY Times
+      <br>
+
+      <p>
+      Hellbenders are a threatened species. Eastern Hellbenders were once found in over 570 streams in the Eastern to Central U.S alone. Now their numbers have plummeted to only occupy 126 streams.
+      </p>
+      <p>
+      Human involvement has greatly harmed their numbers. Deforestation and pollution of waterways have stressed these delicate creates, causing them to even cannibalize their own young. Researches guess that they are eating their own eggs so that they can survive to breed another season, but we sadly cannot ask the Hellbenders directly. The only thing we can do is to advocate for safer logging and disposal practices. 
+      </p>
+
+
+
+<div id="extras" class="center">
+        <h1> 
+          Extras!
+        </h1>
+        <br>
+         <strong> This is in no way a comprehensive list but just a way to get our visitors interested in these creepy critters! </strong>
+          </div>
+
+
 
      
     </main>
