--- a/src/snakes.html
+++ b/src/snakes.html
@@ -7,8 +7,10 @@
     {% include 'head', title:'Snakes' %}
   <body>
     {% include 'header' %}
-    <main class="snakes"id="main-content">
+    <main class="snakes" id="main">
      
+     <img class="center" src="/assets/snek.gif" alt="Short gif of a snake sticking out its tongue" loop>
+
       <h1>
       Snakes
       </h1>
@@ -25,8 +27,18 @@
         <a href="-"> Garter Snakes </a>
         <a href="-"> Milk Snakes </a>
         <a href="-"> Copper Heads </a>
-        <a href="-"> Extras! </a>
+        <a href="#extras"> Extras! </a>
         </nav>
+
+
+<div id="extras" class="center">
+        <h1> 
+          Extras!
+        </h1>
+        <br>
+         <strong> This is in no way a comprehensive list but just a way to get our visitors interested in these creepy critters! </strong>
+          </div>
+
 
 
     </main>
