added extras info and danger spiders and fixed errors

--- a/src/salamanders.html
+++ b/src/salamanders.html
@@ -77,8 +77,14 @@
         <h1> 
           Extras!
         </h1>
+
+        <h1>
+          User Submissions
+        </h1>
+        </div> 
         <br>
-         <strong> This is in no way a comprehensive list but just a way to get our visitors interested in these creepy critters! </strong>
+
+         <p> <strong> This is in no way a comprehensive list but just a way to get our visitors interested in these creepy critters! </strong> </p>
           </div>
 
 
