--- a/src/snakes.html
+++ b/src/snakes.html
@@ -35,9 +35,21 @@
         <h1> 
           Extras!
         </h1>
+
+        <h1>
+          User Submissions
+        </h1>
+        </div>
+
+        <img alt="Image of a common milk snake in a mason jar" src="/assets/kmw.png" />
+        Kristen, 2021
+        <p> 
+        This is a milk snake -
+        </p>
+
         <br>
-         <strong> This is in no way a comprehensive list but just a way to get our visitors interested in these creepy critters! </strong>
-          </div>
+         <p> <strong> This is in no way a comprehensive list but just a way to get our visitors interested in these creepy critters! </strong> </p>
+          
 
 
 
