added snake story + red-spotted newt

--- a/src/about.html
+++ b/src/about.html
@@ -56,7 +56,10 @@
       <a href="https://www.scientificamerican.com/article/cannibalistic-dads-may-be-contributing-to-hellbender-salamander-declines/" target="_blank"> Cannibal Hellbenders + Pete Oxford Image </a>
       <a href="https://research.fiu.edu/documents/iacuc/animalCareDocuments/guidelinesAmphibiansReptilesLab.pdf" target="_blank"> Amphibean Handling info </a>
       <a href="https://en.wikipedia.org/wiki/Hellbender" target="_blank"> Hellbender Wiki </a>
-      <a href="" target="_blank"> </a>
+      <a href="https://herpsofnc.org/red-spotted-newt/" target="_blank"> Kevin Stohlgren Image </a>
+      <a href="https://en.wikipedia.org/wiki/Eastern_newt" target="_blank"> Red-Spotted Newt Wiki </a>
+      <a href="https://dec.ny.gov/nature/animals-fish-plants/amphibians-reptiles/eastern-red-spotted-newt" target="_blank"> Red-Spotted Newt Info (NY Department of Enviornmental Conservation)</a>
+      <a href="https://sdzwildlifeexplorers.org/animals/salamander-and-newt" target="_blank"> Salamander VS Newt Info </a>
       <a href="https://www.theguardian.com/technology/2018/nov/25/five-animals-that-can-regenerate-salamander-starfish" target=”_blank” > Silly Salamander Image </a>
     </div>
       <br>
