--- a/src/salamanders.html
+++ b/src/salamanders.html
@@ -25,7 +25,7 @@
 
       <nav class="page-nav" aria-label="page nav"> 
       <a href="#hell"> Hellbenders </a>
-      <a href="-"> Red Spotted Newt </a>
+      <a href="#red"> Red Spotted Newt </a>
       <a href="-"> Spotted Newt </a>
       <a href="#extras"> Extras! </a>
     </nav>
@@ -71,6 +71,43 @@
       Human involvement has greatly harmed their numbers. Deforestation and pollution of waterways have stressed these delicate creates, causing them to even cannibalize their own young. Researches guess that they are eating their own eggs so that they can survive to breed another season, but we sadly cannot ask the Hellbenders directly. The only thing we can do is to advocate for safer logging and disposal practices. 
       </p>
 
+      <div id="red" class="center">
+        <h1> 
+          Red Spotted Newt
+        </h1>
+      </div>
+        <h3>
+          (Notophthalmus viridescens)
+        </h3>
+      <img src="/assets/newt1.png" alt="Image of a Red-Spotted Newt in the young adult or eft stage" />
+      Paul J. Fusco
+
+      <div class="info">
+        <strong> Lifespan: </strong> 12-15 years
+        <strong> Size: </strong> 7 to 12 cm (3-5 in)
+        <strong> Range: </strong> Eastern North America
+        <strong> Nocturnal or Diurnal: </strong> Diurnal, active during the day
+        <strong> Stigma: </strong> Toxic slimy lizards!
+        <strong> Reality: </strong> Nice salamanders just trying to live like anyone else! (only toxic if eaten!) 
+      </div>
+     <br>
+     <br>
+    <p>
+      Red-Spotted Newts, or Eastern Newts, despite their name, are still salamanders! All newts are salamanders but not all salamanders are newts. The word salamander defines amphibians that have tails as adults. While the word newt describes salamanders that spend a majority of their time on land.  
+    </p>
+    <p>
+      Red-Spotted Newts begin in the water, then spend their young adult stage as fully land-dwelling critters. The picture above is of a newt in the young adult, or eft stage. In this stage they are a bright red-orange color to deter predators from trying to eat them. They aren’t toxic unless you eat them! Not that you plan on eating any newts anytime soon. You’ll most commonly find the land-dwelling variant of these critters. They enjoy hiding under rocks and moist leaf litter.  
+    </p>
+    <br>
+    <img src="/assets/newt2.png" alt="Image of a Red-Spotted Newt in the aquatic adult stage" />
+    Kevin Stohlgren
+
+    <p>
+      When they return to the water as full adults they gain a much different coloration. They turn brown or green to blend into lakes and rivers more easily. However the red spots on their backs remain! That’s how you can identify them no matter what stage you find one at. Pictured directly above is an adult Red-Spotted Newt.
+    </p>
+    <p>
+      If you encounter one of these guys, they are safe to touch but keep handing to a minimum and only if you must! Their skin is very sensitive and the oils on human hands can harm these little ones if we handle them too much.
+    </p>
 
 
 <div id="extras" class="center">
