--- a/src/snakes.html
+++ b/src/snakes.html
@@ -44,7 +44,10 @@
         <img alt="Image of a common milk snake in a mason jar" src="/assets/kmw.png" />
         Kristen, 2021
         <p> 
-        This is a milk snake -
+        This is a juvenile milk snake found Upstate NY. This little guy was wandering in an area of the yard with heavy foot traffic, so our story submitter picked him up in a jar to move him. He was young so he hadn’t learned which places were and weren’t safe yet! Our submitter placed him in a mason jar as to not stress the little guy out too much by handling him. She took a few pictures to admire later before releasing him to a quieter, safer part of the yard.
+        </p>
+        <p>
+          Story from Kristen, 2021
         </p>
 
         <br>
