--- a/src/spiders.html
+++ b/src/spiders.html
@@ -204,7 +204,10 @@
         <img alt="Image of a Yellow Garden Spider with a thumb next to it for scale" src="/assets/sam.JPG" />
         Samantha, 2018
         <p> 
-        This is a Yellow Garden Spider found in a garden in Upstate NY between some tall tomato plants and grass! This is a female argiope who spent the entire summer in that garden. She wasn't bothered too much, besides some gawking and casual conversation with the owners of the garden! Story from Samantha of the summer of 2018.
+        This is a Yellow Garden Spider found in a garden in Upstate NY between some tall tomato plants and grass! This is a female argiope who spent the entire summer in that garden. She wasn't bothered too much, besides some gawking and casual conversation with the owners of the garden!
+        </p>
+        <p>
+          Story from Samantha, summer of 2018.
         </p>
 
  <!-- X hide for now, embed link to Britannica Website 
