page breaks for sources

--- a/src/about.html
+++ b/src/about.html
@@ -45,21 +45,28 @@
       <a href="https://www.flickr.com/photos/doundounba/17385204381/" target=”_blank” > Paul Gaudette Image </a>
       <a href="https://fineartamerica.com/featured/1-regal-jumping-spider-jumping-scott-linstead.html?newartwork=true" target=”_blank” > Scott Linstead Image </a>
       <a href="https://en.wikipedia.org/wiki/Jumping_spider" target=”_blank” > Jumping Spider Wiki </a>
+      <br>
       <a href="https://bygl.osu.edu/node/1686" target=”_blank” > Yellow Garden Spider info (BYGL) </a>
       <a href="https://entnemdept.ufl.edu/creatures/MISC/SPIDERS/yellow-garden-spider.html" target=”_blank” > Yellow Garden Spider info (Featured Creatures) </a>
       <a href="https://www.shutterstock.com/image-photo/female-black-yellow-garden-spider-sitting-279216572" target=”_blank” > Shutterstock Yellow Garden Spider Image </a>
       <a href="https://en.wikipedia.org/wiki/Argiope_aurantia" target=”_blank” > Yellow Garden Spider Wiki </a>
+      <br>
       <a href="https://www.uky.edu/Ag/CritterFiles/casefile/spiders/crab/crab.htm#:~:text=Many%20crab%20spiders%20live%20for,offspring%20hatch%20in%20the%20spring." target="_blank"> Crab Spider info (University of Kentucky)</a>
       <a href="https://www.istockphoto.com/photo/misum%C3%A8ne-gm1421853771-467350580" target="_blank"> iStock Crab Spider Image </a>
       <a href="https://sciencephotogallery.com/featured/crab-spider-feeding-dr-jeremy-burgess.html" target="_blank"> Jeremy Burgess Image</a>
       <a href="https://en.wikipedia.org/wiki/Thomisidae" target="_blank"> Crab Spider Wiki</a>
+      <br>
       <a href="https://www.scientificamerican.com/article/cannibalistic-dads-may-be-contributing-to-hellbender-salamander-declines/" target="_blank"> Cannibal Hellbenders + Pete Oxford Image </a>
       <a href="https://research.fiu.edu/documents/iacuc/animalCareDocuments/guidelinesAmphibiansReptilesLab.pdf" target="_blank"> Amphibean Handling info </a>
       <a href="https://en.wikipedia.org/wiki/Hellbender" target="_blank"> Hellbender Wiki </a>
+      <br>
       <a href="https://herpsofnc.org/red-spotted-newt/" target="_blank"> Kevin Stohlgren Image </a>
       <a href="https://en.wikipedia.org/wiki/Eastern_newt" target="_blank"> Red-Spotted Newt Wiki </a>
       <a href="https://dec.ny.gov/nature/animals-fish-plants/amphibians-reptiles/eastern-red-spotted-newt" target="_blank"> Red-Spotted Newt Info (NY Department of Enviornmental Conservation)</a>
       <a href="https://sdzwildlifeexplorers.org/animals/salamander-and-newt" target="_blank"> Salamander VS Newt Info </a>
+      <br>
+      <a href="" target="_blank"> - </a>
+      <br>
       <a href="https://www.theguardian.com/technology/2018/nov/25/five-animals-that-can-regenerate-salamander-starfish" target=”_blank” > Silly Salamander Image </a>
     </div>
       <br>
