added salamander user story

--- a/src/salamanders.html
+++ b/src/salamanders.html
@@ -120,6 +120,15 @@
         </h1>
         </div> 
         <br>
+        <img alt="Image of a young adult or eft stage Red-Spotted Newt in a hand" src="/assets/newt3.JPEG" />
+        Kristen, 2020
+        <p> 
+          Here we have a young adult or eft stage Red-Spotted Newt from Upstate NY! This little one was found while doing yard work. The submitter states that they usually find a lot of newts and salamanders on their property. So many salamanders is a good sign of a healthy environment! This one was briefly captured, photographed, and released to somewhere away from the yard work, into a nice moist pile of leaves.
+        </p>
+        <p>
+          Story from Kristen, 2020
+        </p>
+
 
          <p> <strong> This is in no way a comprehensive list but just a way to get our visitors interested in these creepy critters! </strong> </p>
           </div>
